--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts --exec ts-node"
+    "dev": "nodemon src/index.ts --exec ts-node",
+    "start":"node src/index.ts --exec ts-node"
   },
   "author": "Fabricio Palavecino",
   "license": "ISC",
