--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts --exec ts-node",
-    "start":"node src/index.ts --exec ts-node"
+    "start":"ts-node src/index.ts"
   },
   "author": "Fabricio Palavecino",
   "license": "ISC",
